// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardButton renders custom color 1`] = `
.css-0,
[data-css-0] {
  background-color: #f0f0f0;
  border: none;
  transition: 250ms ease-in-out;
  -webkit-transition: 250ms ease-in-out;
  -moz-transition: 250ms ease-in-out;
}

.css-0:focus,
[data-css-0]:focus {
  outline: none;
}

.css-0:hover,
[data-css-0]:hover {
  cursor: pointer;
  background: #d9d9d9;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

<button
  data-css-3=""
  data-css-0=""
>
  Click me
</button>
`;

exports[`CardButton renders without error 1`] = `
.css-0,
[data-css-0] {
  background-color: #3598db;
  border: none;
  transition: 250ms ease-in-out;
  -webkit-transition: 250ms ease-in-out;
  -moz-transition: 250ms ease-in-out;
}

.css-0:focus,
[data-css-0]:focus {
  outline: none;
}

.css-0:hover,
[data-css-0]:hover {
  cursor: pointer;
  background: #227dbf;
}

.css-3,
[data-css-3] {
  box-sizing: border-box;
  align-content: center;
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: row;
  justify-content: center;
  flex: 1;
  cursor: pointer;
  -webkit-align-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-box-orient: horizontal;
  -webkit-box-direction: normal;
  -webkit-flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -webkit-flex: 1;
}

<button
  data-css-0=""
  data-css-3=""
  onClick={[Function]}
>
  Click me
</button>
`;
